# opengl-game

./: .gitignore  CMakeLists.txt  Game  README.md  UNLICENSE.md
lib/glfw-3.3.4/src/: mappings.h
lib/stb/docs/: stb_howto.txt
res/shaders/: chunk.frag  chunk.vert  compass.vert  test.frag  test.vert
src/engine/logging/: logging.cpp  logging.hpp
src/engine/math/: math.hpp
src/engine/rendering/: rendering.cpp  rendering.hpp  typedefs.hpp  window.hpp
src/engine/rendering/camera/: Camera.cpp  Camera.hpp
src/engine/rendering/light/: Light.cpp  Light.hpp
src/engine/rendering/renderer/: Renderer.hpp
src/engine/rendering/shader/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/engine/world/block/: Block.hpp  BlockType.hpp
src/engine/world/chunk/: Chunk.cpp  Chunk.hpp
src/main/: main.cpp  settings.hpp
src/main/rendering/: rendering.cpp  rendering.hpp
src/main/rendering/camera/: GameCamera.cpp  GameCamera.hpp
src/main/rendering/renderer/: ChunkRenderer.cpp  ChunkRenderer.hpp  DebugRenderer.cpp  DebugRenderer.hpp  GameRenderer.cpp  GameRenderer.hpp
src/main/world/block/: blocks.hpp
src/util/logging/: logging.hpp
src/util/math/: Matrix.hpp  Noise.hpp  Vector.hpp  math.cpp  math.hpp
